uae page update

--- a/index.html
+++ b/index.html
@@ -915,6 +915,145 @@
         </div>
     </section>
 
+    <!-- Global Presence Section -->
+    <section class="global-presence-section" id="global-presence" aria-labelledby="global-presence-heading" style="padding: 5rem 0; background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 100%);">
+        <div class="container">
+            <h2 id="global-presence-heading" class="section-title" style="text-align: center; margin-bottom: 3rem;">Our Global Presence</h2>
+            <p style="text-align: center; max-width: 800px; margin: 0 auto 4rem auto; font-size: 1.125rem; color: #666;">
+                With offices and manufacturing facilities across multiple continents, we provide local expertise and global reach to serve your valve automation needs worldwide.
+            </p>
+            
+            <div class="global-locations-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 2rem; max-width: 1400px; margin: 0 auto;">
+                
+                <!-- India -->
+                <div class="location-card" id="india" style="background: #fff; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 24px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                    <div style="background: linear-gradient(135deg, #ff9933 0%, #138808 100%); padding: 2rem; position: relative; overflow: hidden;">
+                        <div style="position: absolute; top: 10px; right: 10px; background: rgba(255,255,255,0.2); backdrop-filter: blur(10px); padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600; color: #fff;">
+                            <i class="fas fa-building"></i> Manufacturing Hub
+                        </div>
+                        <h3 style="color: #fff; font-size: 1.75rem; margin: 0 0 0.5rem 0; font-weight: 800;">India</h3>
+                        <p style="color: rgba(255,255,255,0.95); margin: 0; font-size: 0.95rem;">Coimbatore • Mumbai</p>
+                    </div>
+                    <div style="padding: 2rem;">
+                        <div style="margin-bottom: 1.5rem;">
+                            <h4 style="color: #c41e3a; font-size: 1.125rem; margin: 0 0 1rem 0; display: flex; align-items: center; gap: 0.5rem;">
+                                <i class="fas fa-map-marker-alt"></i> Locations
+                            </h4>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin-bottom: 0.75rem;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">Coimbatore (HQ)</p>
+                                <p style="margin: 0; font-size: 0.875rem; color: #666; line-height: 1.6;">Susin I-Tork India Pvt Ltd<br>Manufacturing & Corporate Office</p>
+                            </div>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">Mumbai Branch</p>
+                                <p style="margin: 0; font-size: 0.875rem; color: #666; line-height: 1.6;">Reguluss Corporate Office<br>Hiranandani Estate, Thane West</p>
+                            </div>
+                        </div>
+                        <a href="global-presence/susin-itork-india.html" class="btn btn-outline" style="width: 100%; text-align: center; font-size: 0.95rem;">
+                            <i class="fas fa-arrow-right"></i> View India Profile
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Middle East -->
+                <div class="location-card" id="middle-east" style="background: #fff; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 24px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                    <div style="background: linear-gradient(135deg, #c41e3a 0%, #8b1428 100%); padding: 2rem; position: relative; overflow: hidden;">
+                        <div style="position: absolute; top: 10px; right: 10px; background: rgba(255,255,255,0.2); backdrop-filter: blur(10px); padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600; color: #fff;">
+                            <i class="fas fa-globe-asia"></i> Regional Hub
+                        </div>
+                        <h3 style="color: #fff; font-size: 1.75rem; margin: 0 0 0.5rem 0; font-weight: 800;">Middle East</h3>
+                        <p style="color: rgba(255,255,255,0.95); margin: 0; font-size: 0.95rem;">UAE • Qatar • Oman</p>
+                    </div>
+                    <div style="padding: 2rem;">
+                        <div style="margin-bottom: 1.5rem;">
+                            <h4 style="color: #c41e3a; font-size: 1.125rem; margin: 0 0 1rem 0; display: flex; align-items: center; gap: 0.5rem;">
+                                <i class="fas fa-map-marker-alt"></i> Locations
+                            </h4>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin-bottom: 0.75rem;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">UAE (Sharjah)</p>
+                                <p style="margin: 0 0 0.5rem 0; font-size: 0.875rem; color: #666;">Susin I-Tork ME FZC</p>
+                                <p style="margin: 0; font-size: 0.75rem; color: #999;"><i class="fas fa-phone"></i> +971-56810 3434</p>
+                            </div>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin-bottom: 0.75rem;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">Qatar (Doha)</p>
+                                <p style="margin: 0 0 0.5rem 0; font-size: 0.875rem; color: #666;">Susin Qatar WLL</p>
+                                <p style="margin: 0; font-size: 0.75rem; color: #999;"><i class="fas fa-phone"></i> +974-3164 8923</p>
+                            </div>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">Oman (Muscat)</p>
+                                <p style="margin: 0 0 0.5rem 0; font-size: 0.875rem; color: #666;">Susin I-Tork Oman</p>
+                                <p style="margin: 0; font-size: 0.75rem; color: #999;"><i class="fas fa-phone"></i> +968 78489305</p>
+                            </div>
+                        </div>
+                        <a href="contact.html#locations" class="btn btn-outline" style="width: 100%; text-align: center; font-size: 0.95rem;">
+                            <i class="fas fa-envelope"></i> Contact Middle East Offices
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Europe -->
+                <div class="location-card" id="europe" style="background: #fff; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 24px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                    <div style="background: linear-gradient(135deg, #000 0%, #D00 20%, #FFCE00 100%); padding: 2rem; position: relative; overflow: hidden;">
+                        <div style="position: absolute; top: 10px; right: 10px; background: rgba(255,255,255,0.2); backdrop-filter: blur(10px); padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600; color: #fff;">
+                            <i class="fas fa-industry"></i> Technical Center
+                        </div>
+                        <h3 style="color: #fff; font-size: 1.75rem; margin: 0 0 0.5rem 0; font-weight: 800;">Europe</h3>
+                        <p style="color: rgba(255,255,255,0.95); margin: 0; font-size: 0.95rem;">Germany</p>
+                    </div>
+                    <div style="padding: 2rem;">
+                        <div style="margin-bottom: 1.5rem;">
+                            <h4 style="color: #c41e3a; font-size: 1.125rem; margin: 0 0 1rem 0; display: flex; align-items: center; gap: 0.5rem;">
+                                <i class="fas fa-map-marker-alt"></i> Locations
+                            </h4>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin-bottom: 0.75rem;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">Hamburg, Germany</p>
+                                <p style="margin: 0 0 0.5rem 0; font-size: 0.875rem; color: #666;">KTC System Technik GmbH</p>
+                                <p style="margin: 0 0 0.5rem 0; font-size: 0.875rem; color: #666;">KTC Controls</p>
+                                <p style="margin: 0; font-size: 0.75rem; color: #999;"><i class="fas fa-phone"></i> +49-(0)151 54 32 92 55</p>
+                            </div>
+                        </div>
+                        <a href="contact.html#locations" class="btn btn-outline" style="width: 100%; text-align: center; font-size: 0.95rem;">
+                            <i class="fas fa-envelope"></i> Contact Europe Office
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Far East -->
+                <div class="location-card" id="far-east" style="background: #fff; border-radius: 16px; overflow: hidden; box-shadow: 0 8px 24px rgba(0,0,0,0.1); transition: transform 0.3s ease, box-shadow 0.3s ease;">
+                    <div style="background: linear-gradient(135deg, #003478 0%, #C60C30 100%); padding: 2rem; position: relative; overflow: hidden;">
+                        <div style="position: absolute; top: 10px; right: 10px; background: rgba(255,255,255,0.2); backdrop-filter: blur(10px); padding: 0.5rem 1rem; border-radius: 20px; font-size: 0.875rem; font-weight: 600; color: #fff;">
+                            <i class="fas fa-handshake"></i> Partners
+                        </div>
+                        <h3 style="color: #fff; font-size: 1.75rem; margin: 0 0 0.5rem 0; font-weight: 800;">Far East</h3>
+                        <p style="color: rgba(255,255,255,0.95); margin: 0; font-size: 0.95rem;">South Korea • Singapore • Malaysia</p>
+                    </div>
+                    <div style="padding: 2rem;">
+                        <div style="margin-bottom: 1.5rem;">
+                            <h4 style="color: #c41e3a; font-size: 1.125rem; margin: 0 0 1rem 0; display: flex; align-items: center; gap: 0.5rem;">
+                                <i class="fas fa-map-marker-alt"></i> Partner Network
+                            </h4>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin-bottom: 0.75rem;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">South Korea</p>
+                                <p style="margin: 0; font-size: 0.875rem; color: #666;">I-Tork Controls Co., LTD.</p>
+                            </div>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; margin-bottom: 0.75rem;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">Singapore</p>
+                                <p style="margin: 0; font-size: 0.875rem; color: #666;">I-Tork Controls (AHF)</p>
+                            </div>
+                            <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px;">
+                                <p style="margin: 0 0 0.5rem 0; font-weight: 700; color: #1a1a1a;">Malaysia</p>
+                                <p style="margin: 0; font-size: 0.875rem; color: #666;">I-Tork Control (AHF)</p>
+                            </div>
+                        </div>
+                        <a href="contact.html" class="btn btn-outline" style="width: 100%; text-align: center; font-size: 0.95rem;">
+                            <i class="fas fa-envelope"></i> Inquire About Partners
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
     <!-- CTA Section -->
     <section class="cta" aria-labelledby="cta-heading">
         <div class="container">
