--- a/careers.html
+++ b/careers.html
@@ -254,7 +254,9 @@
                                     <p class="submenu-actions"><a class="btn btn-sm" href="global-presence/susin-itork-india.html">View full profile</a> <a class="btn btn-link" href="contact.html#locations">Contact local office</a></p>
                                 </div>
                             </li>
-                            <li><a href="index.html#middle-east">Middle East</a></li>
+                            <li><a href="global-presence/susin-itork-uae.html">UAE</a></li>
+                            <li><a href="global-presence/susin-itork-qatar.html">Qatar</a></li>
+                            <li><a href="index.html#middle-east">Middle East Overview</a></li>
                             <li><a href="index.html#europe">Europe</a></li>
                             <li><a href="index.html#far-east">Far East</a></li>
                             <li><a href="index.html#recent-projects">Recent Projects</a></li>
