--- a/index.html
+++ b/index.html
@@ -333,7 +333,9 @@
                                             <h4 class="dropdown-title">Our Locations</h4>
                                             <ul class="dropdown-links">
                                                 <li><a href="global-presence/susin-itork-india.html"><i class="fas fa-map-marker-alt"></i> India</a></li>
-                                                <li><a href="index.html#middle-east"><i class="fas fa-map-marker-alt"></i> Middle East</a></li>
+                                                <li><a href="global-presence/susin-itork-uae.html"><i class="fas fa-map-marker-alt"></i> UAE</a></li>
+                                                <li><a href="global-presence/susin-itork-qatar.html"><i class="fas fa-map-marker-alt"></i> Qatar</a></li>
+                                                <li><a href="index.html#middle-east"><i class="fas fa-map-marker-alt"></i> Middle East Overview</a></li>
                                                 <li><a href="index.html#europe"><i class="fas fa-map-marker-alt"></i> Europe</a></li>
                                                 <li><a href="index.html#far-east"><i class="fas fa-map-marker-alt"></i> Far East</a></li>
                                             </ul>
@@ -411,11 +413,27 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="nav-item">
+                            <li class="nav-item has-dropdown">
                                 <a href="careers.html" class="nav-link">
                                     <i class="fas fa-briefcase"></i>
                                     <span>Careers</span>
+                                    <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
+                                <div class="mega-dropdown">
+                                    <div class="dropdown-content">
+                                        <div class="dropdown-column">
+                                            <h4 class="dropdown-title">Join Our Team</h4>
+                                            <ul class="dropdown-links">
+                                                <li><a href="careers.html#openings"><i class="fas fa-user-plus"></i> Open Positions</a></li>
+                                                <li><a href="careers.html#life"><i class="fas fa-users"></i> Life at Susin</a></li>
+                                                <li><a href="careers.html#benefits"><i class="fas fa-gift"></i> Benefits</a></li>
+                                                <li><a href="careers.html#internships"><i class="fas fa-graduation-cap"></i> Internships</a></li>
+                                                <li><a href="careers.html#apply"><i class="fas fa-paper-plane"></i> How to Apply</a></li>
+                                                <li><a href="careers.html#contact-hr"><i class="fas fa-phone"></i> Contact HR</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
                             </li>
                             <li class="nav-item has-dropdown">
                                 <a href="resources-technical-docs.html" class="nav-link">
@@ -433,6 +451,26 @@
                                                 <li><a href="resources.html#sizing-programs"><i class="fas fa-calculator"></i> Sizing Programs</a></li>
                                                 <li><a href="resources.html#faq"><i class="fas fa-question-circle"></i> FAQs</a></li>
                                                 <li><a href="resources.html#blog"><i class="fas fa-rss"></i> Blog & News</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="nav-item has-dropdown">
+                                <a href="contact-support-sales.html" class="nav-link">
+                                    <i class="fas fa-phone-alt"></i>
+                                    <span>Contact</span>
+                                    <i class="fas fa-angle-down dropdown-arrow"></i>
+                                </a>
+                                <div class="mega-dropdown">
+                                    <div class="dropdown-content">
+                                        <div class="dropdown-column">
+                                            <h4 class="dropdown-title">Get in Touch</h4>
+                                            <ul class="dropdown-links">
+                                                <li><a href="contact.html#contact-form"><i class="fas fa-envelope"></i> Contact Form</a></li>
+                                                <li><a href="contact.html#sales"><i class="fas fa-handshake"></i> Sales Inquiry</a></li>
+                                                <li><a href="contact.html#support"><i class="fas fa-headset"></i> Technical Support</a></li>
+                                                <li><a href="contact.html#locations"><i class="fas fa-map-marker-alt"></i> Office Locations</a></li>
                                             </ul>
                                         </div>
                                     </div>
