--- a/products-actuators-gearboxes.html
+++ b/products-actuators-gearboxes.html
@@ -90,11 +90,13 @@
 </head>
 <body>
     <a class="skip-link" href="#main-content">Skip to content</a>
-    <!-- Navigation -->
-    <nav class="navbar">
-        <div class="container">
-            <!-- Top utility bar (double-layer header) -->
-            <div class="topbar" role="region" aria-label="Top utility bar">
+    
+    <header class="modern-header">
+        <!-- Top Info Bar -->
+        <div class="header-top-bar">
+            <div class="container">
+                <div class="top-bar-content">
+                    <div class="header-info-left">
                 <div class="topbar-inner">
                     <div class="topbar-left">
                         <a href="tel:+917708097242" class="topbar-contact"><i class="fas fa-phone"></i> +91 77080 97242</a>
