--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
                                 </a>
                             </li>
                             <li class="nav-item has-dropdown">
-                                <a href="products-actuators-gearboxes.html" class="nav-link">
+                                <a href="products-actuators-gearboxes.html" class="nav-link" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-cogs"></i>
                                     <span>Products</span>
                                     <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
-                                <div class="mega-dropdown">
+                                <div class="mega-dropdown" role="menu" aria-hidden="true">
                                     <div class="dropdown-content">
                                         <div class="dropdown-column">
                                             <h4 class="dropdown-title">Actuator Solutions</h4>
@@ -322,12 +322,12 @@
                                 </div>
                             </li>
                             <li class="nav-item has-dropdown">
-                                <a href="#" class="nav-link">
+                                <a href="#" class="nav-link" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-map-marked-alt"></i>
                                     <span>Global Presence</span>
                                     <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
-                                <div class="mega-dropdown">
+                                <div class="mega-dropdown" role="menu" aria-hidden="true">
                                     <div class="dropdown-content">
                                         <div class="dropdown-column">
                                             <h4 class="dropdown-title">Our Locations</h4>
@@ -350,12 +350,12 @@
                                 </div>
                             </li>
                             <li class="nav-item has-dropdown">
-                                <a href="industries-served.html" class="nav-link">
+                                <a href="industries-served.html" class="nav-link" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-industry"></i>
                                     <span>Industries</span>
                                     <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
-                                <div class="mega-dropdown">
+                                <div class="mega-dropdown" role="menu" aria-hidden="true">
                                     <div class="dropdown-content">
                                         <div class="dropdown-column">
                                             <h4 class="dropdown-title">Sectors We Serve</h4>
@@ -372,12 +372,12 @@
                                 </div>
                             </li>
                             <li class="nav-item has-dropdown">
-                                <a href="services-installation-maintenance.html" class="nav-link">
+                                <a href="services-installation-maintenance.html" class="nav-link" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-tools"></i>
                                     <span>Services</span>
                                     <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
-                                <div class="mega-dropdown">
+                                <div class="mega-dropdown" role="menu" aria-hidden="true">
                                     <div class="dropdown-content">
                                         <div class="dropdown-column">
                                             <h4 class="dropdown-title">Expert Services</h4>
@@ -394,12 +394,12 @@
                                 </div>
                             </li>
                             <li class="nav-item has-dropdown">
-                                <a href="about-industrial-actuators.html" class="nav-link">
+                                <a href="about-industrial-actuators.html" class="nav-link" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-building"></i>
                                     <span>About</span>
                                     <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
-                                <div class="mega-dropdown">
+                                <div class="mega-dropdown" role="menu" aria-hidden="true">
                                     <div class="dropdown-content">
                                         <div class="dropdown-column">
                                             <h4 class="dropdown-title">Company</h4>
@@ -414,12 +414,12 @@
                                 </div>
                             </li>
                             <li class="nav-item has-dropdown">
-                                <a href="careers.html" class="nav-link">
+                                <a href="careers.html" class="nav-link" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-briefcase"></i>
                                     <span>Careers</span>
                                     <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
-                                <div class="mega-dropdown">
+                                <div class="mega-dropdown" role="menu" aria-hidden="true">
                                     <div class="dropdown-content">
                                         <div class="dropdown-column">
                                             <h4 class="dropdown-title">Join Our Team</h4>
@@ -436,12 +436,12 @@
                                 </div>
                             </li>
                             <li class="nav-item has-dropdown">
-                                <a href="resources-technical-docs.html" class="nav-link">
+                                <a href="resources-technical-docs.html" class="nav-link" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-book-open"></i>
                                     <span>Resources</span>
                                     <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
-                                <div class="mega-dropdown">
+                                <div class="mega-dropdown" role="menu" aria-hidden="true">
                                     <div class="dropdown-content">
                                         <div class="dropdown-column">
                                             <h4 class="dropdown-title">Technical Resources</h4>
@@ -457,12 +457,12 @@
                                 </div>
                             </li>
                             <li class="nav-item has-dropdown">
-                                <a href="contact-support-sales.html" class="nav-link">
+                                <a href="contact-support-sales.html" class="nav-link" aria-haspopup="true" aria-expanded="false">
                                     <i class="fas fa-phone-alt"></i>
                                     <span>Contact</span>
                                     <i class="fas fa-angle-down dropdown-arrow"></i>
                                 </a>
-                                <div class="mega-dropdown">
+                                <div class="mega-dropdown" role="menu" aria-hidden="true">
                                     <div class="dropdown-content">
                                         <div class="dropdown-column">
                                             <h4 class="dropdown-title">Get in Touch</h4>
